--- a/main.css
+++ b/main.css
@@ -5,10 +5,12 @@ div {
 	display: inline-block
 }
 
+
+
 .container {
 	width: 500px;
 	height: 300px;
-	margin: 0 auto;
+	margin: 300px auto;
 	background-color: black;
 	line-height: 300px;
 	text-align: center;
@@ -40,5 +42,40 @@ div {
     height: 150px;
     margin: 0 auto;
     vertical-align: middle;
+}
+
+/*square-box-centered*/
+
+/*styling for a transparent background via position fixed*/
+.lightbox {
+    position: fixed;
+    right: 0px;
+    bottom: 0px;
+    left: 0px;
+    top: 0px;
+    background: rgba(18, 21, 24, 0.9);
+}
+
+/*styling for the contents of a lightbox*/
+.content {
+    border-radius: 6px;
+    position: absolute;
+    top: 50%;
+    right: 10%;
+    left: 10%;
+    transform: translateY(-50%);
+    background-color: white;
+    padding: 10px;
+    width: 50%;
+    margin: 0 auto;
+}
+
+/*styling for buttons within the light box*/
+.content a {
+    color: red;
+}
+.close {
+    float: right;
+    padding: 10%;
 }
 
